# dume

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  conanfile.txt
crates/dume/: Cargo.toml
crates/dume-markup/: Cargo.toml
crates/dume-markup/src/: lexer.rs  lib.rs  output.rs  parser.rs
crates/dume-video/: Cargo.toml
crates/dume-video/src/: lib.rs
crates/dume-winit/: Cargo.toml
crates/dume-winit/examples/: images.rs  particles.rs  scribble.rs  simple.rs  text.rs
crates/dume-winit/src/: lib.rs
crates/dume/shaders/: blit.wgsl  path.wgsl  render.wgsl  sprite.wgsl  text.wgsl  yuv.wgsl
crates/dume/src/: canvas.rs  context.rs  font.rs  glyph.rs  layer.rs  lib.rs  path.rs  rect.rs  renderer.rs  scissor.rs  text.rs  texture.rs  yuv.rs
crates/dume/src/atlas/: dynamic.rs  static.rs
crates/dume/src/renderer/: layering.rs  path.rs  sprite.rs  text.rs  yuv.rs
crates/dume/src/text/: layout.rs
crates/dume/src/text/layout/: resize.rs
crates/zylo/: Cargo.toml
crates/zylo-app/: Cargo.toml
crates/zylo-app/examples/: blob.rs  clip.rs  dashing.rs  primitives.rs
crates/zylo-app/src/: app.rs  lib.rs  presenter.rs
crates/zylo-core/: Cargo.toml
crates/zylo-tiny-skia/: Cargo.toml
crates/zylo-tiny-skia/src/: lib.rs
crates/zylo-wgpu/: Cargo.toml
crates/zylo/src/: backend.rs  canvas.rs  color.rs  context.rs  layer.rs  lib.rs  path.rs  primitive.rs  text.rs  types.rs
crates/zylo/src/backend/: command.rs
crates/zylo/src/primitive/: rectangle.rs
crates/zylo/src/text/: builder.rs  font.rs  layout.rs  span.rs  style.rs
example/: draw.lua  sprite.cpp  ui.cpp
examples/: testbed.rs
include/: dume.h
old/dume-markup/src/: output.rs  parser.rs
old/dume-video/examples/: play_video.rs
old/dume-winit/examples/: images.rs  scribble.rs  text.rs
old/dume-winit/src/: lib.rs
old/dume/src/: atlas.rs  context.rs  font.rs  glyph.rs  layer.rs  texture.rs
old/dume/src/atlas/: static.rs
old/dume/src/text/layout/: resize.rs
renderer/: Cargo.toml  cbindgen.toml
renderer/examples/: sprite.rs
renderer/include/: dume_renderer.h  glam.h
renderer/shader/: glyph.frag.glsl  glyph.frag.spv  glyph.vert.glsl  glyph.vert.spv  path.frag.glsl  shadermake.toml  sprite.frag.glsl  sprite.frag.spv  sprite.vert.glsl  sprite.vert.spv  uber.frag.glsl  uber.frag.spv  uber.vert.glsl  uber.vert.spv  uber_vert.wgsl
renderer/src/: atlas.rs  canvas.rs  ffi.rs  font.rs  glyph.rs  lib.rs  path.rs  renderer.rs  sprite.rs  sprite_renderer.rs  text.rs
renderer/src/ffi/: window.rs
renderer/src/text/: layout.rs  markup.rs
renderer/src/text/markup/: color.rs
shader/: uber.frag  uber.wgsl  uber_frag.wgsl
shaders/: blit.wgsl  path.wgsl  sprite.wgsl  text.wgsl
src/: atlas.rs  canvas.rs  context.rs  dume.cpp  font.rs  glyph.rs  lib.rs  path.rs  renderer.rs  sprite.rs  text.rs  texture.rs  thread_pool.rs
src/atlas/: dynamic.rs  static.rs
src/renderer/: layering.rs  path.rs  sprite.rs  text.rs
src/text/: layout.rs  markup.rs
ui/: dume.lua
ui/widget/: button.lua  center.lua  clickable.lua  container.lua  divider.lua  empty.lua  fixed.lua  flex.lua  image.lua  navigator.lua  padding.lua  progress_bar.lua  scrollable.lua  spacer.lua  style_modifier.lua  table.lua  text.lua  tooltip.lua
