[package]
name = "dume-renderer"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.7"
bytemuck = { version = "1", features = [ "derive" ] }
fontdb = "0.5"
glam = { version = "0.15", features = [ "bytemuck" ] }
guillotiere = "0.6"
image = { version = "0.23", default-features = false, features = [ "png", "jpeg" ] }
lyon = "0.17"
palette = "0.5"
slotmap = "1"
rustybuzz = "0.3"
ttf-parser = "0.12"
wgpu = "0.8"

[dev-dependencies]
minifb = { version = "0.19", default-features = false, features = [ "x11" ] }
pollster = "0.2"
