[package]
name = "dume-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
dume = { path = "../dume" }
glam = "0.20"
instant = "0.1"
wgpu = { version = "0.12", features = ["webgl"] }
winit = { version = "0.26", default-features = false }

[features]
default = ["x11"]
x11 = ["winit/x11"]
wayland = ["winit/wayland"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
log = "0.4"
noise = { version = "0.7", default-features = false }
palette = "0.6"
rand = "0.8"
simple_logger = "2"
