[package]
name = "dume"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
bytemuck = { version = "1", features = [ "derive" ] }
dume-markup = { path = "../dume-markup" }
fast_image_resize = "0.5"
glam = { version = "0.17", features = [ "bytemuck" ] }
guillotiere = "0.6"
image = { version = "0.23", default-features = false, optional = true }
log = "0.4"
lru = "0.7"
once_cell = "1"
palette = "0.6"
parking_lot = "0.11"
rectangle-pack = "0.4"
serde = { version = "1", features = [ "derive" ] }
slotmap = "1"
smallvec = "1"
smartstring = { version = "0.2", features = [ "serde" ] }
swash = "0.1"
thiserror = "1"
unicode-bidi = "0.3"
wgpu = "0.12"

[features]
default = ["png", "jpeg"]
image_ = ["image"]
png = ["image_", "image/png"]
jpeg = ["image_", "image/jpeg"]
