[package]
name = "zylo"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-srgb8 = { version = "1", optional = true }          # sRGB <=> linear conversions
fontdb = { version = "0.9", optional = true }            # font queries
glam = "0.21"                                            # vector + transform types
hypher = { version = "0.1", optional = true }            # text hyphenization
rustc-hash = "1"                                         # faster hashing
rustybuzz = { version = "0.5", optional = true }         # text shaping
swash = { version = "0.1", optional = true }             # glyph outlining
owned_ttf_parser = { version = "0.15", optional = true } # font parsing
zeno = { version = "0.2", optional = true }              # glyph rasterization
slotmap = "1"

[features]
default = ["text"]
color-to-linear = ["fast-srgb8"]
text = ["fontdb", "rustybuzz", "zeno", "owned_ttf_parser", "hypher", "swash"]
