[package]
name = "zylo"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-srgb8 = { version = "1", optional = true }          # sRGB <=> linear conversions
fontdb = { version = "0.10", optional = true }            # font queries
glam = "0.22"                                            # vector + transform types
rustc-hash = "1"                                         # faster hashing
rustybuzz = { version = "0.6", optional = true }         # text shaping
swash = { version = "0.1", optional = true }             # glyph outlining
owned_ttf_parser = { version = "0.17", optional = true } # font parsing
slotmap = "1"

[features]
default = ["text"]
color-to-linear = ["fast-srgb8"]
text = ["fontdb", "rustybuzz", "owned_ttf_parser", "swash"]
